--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+#########################Instalation#########################
+Install this plugin to your rails application from github via the rails command:
+script/plugin install git://github.com/julienxaop/active_scaffold_hacks.git
+-------------------------------------------------------------
+
 #################################################
 Nested relations  Hack
 #################################################
@@ -14,5 +19,3 @@ Take a look at the active_scaffold_hacks/lib/active_scaffold/constraints.rb file
 There is also a hack that fix the polymorphic nested relations that ActiveScafold didn't handle correctly.
 This issue is fixed in active_scaffold_hacks/lib/extensions/reverse_associations.rb
 and in active_scaffold_hacks/frontends/default/views/_nested.html.erb
-
-
