--- a/README
+++ b/README
@@ -19,3 +19,10 @@ Take a look at the active_scaffold_hacks/lib/active_scaffold/constraints.rb file
 There is also a hack that fix the polymorphic nested relations that ActiveScafold didn't handle correctly.
 This issue is fixed in active_scaffold_hacks/lib/extensions/reverse_associations.rb
 and in active_scaffold_hacks/frontends/default/views/_nested.html.erb
+
+
+
+-----
+THere is also a hack that fix the one-model-loop nested relation (when a same model have both the :has_many and :belongs_to relations).
+ActiveScaffold didn't handle this case.
+The fix is in active_scaffold_hacks/lib/extensions/reverse_associations.rb at the end of the 'reverse_matches_for' method
