--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 #########################Instalation#########################
-Install this plugin to your rails application from github via the rails command:
+Install this plugin to your rails application via the rails command:
 script/plugin install git://github.com/julienxaop/active_scaffold_hacks.git
 -------------------------------------------------------------
 
 #################################################
-Nested relations  Hack
+Nested ActiveScaffold links issues
 #################################################
 
 This plugin hack the 'condition_from_association_constraint' method initialy defined in active_scaffold/lib/active_scaffold/constraints.rb
@@ -24,7 +24,7 @@ commit => http://github.com/julienxaop/active_scaffold_hacks/commit/2211beb774ec
 
 
 -----
-There is also a hack that fix the one-model-loop nested relation (when a same model have both the :has_many and :belongs_to relations).
+There is also a hack that fix the looped nested relation (when a same model have both the :has_many and :belongs_to relations).
 ActiveScaffold didn't handle this case.
-The fix is in active_scaffold_hacks/lib/extensions/reverse_associations.rb at the end of the 'reverse_matches_for' method
+This issue is fixed in active_scaffold_hacks/lib/extensions/reverse_associations.rb at the end of the 'reverse_matches_for' method.
 commit => http://github.com/julienxaop/active_scaffold_hacks/commit/4ed532db3835e7c15d78e9fb841f364f300bc6d3
